--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "jsdom": "^24.1.0"
+    "jsdom": "^24.1.0",
+    "minimist": "^1.2.8"
   }
 }
